--- a/ShopMvcApp_PD211/appsettings.json
+++ b/ShopMvcApp_PD211/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "LocalDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SuperPowerShopMvcDb_PD211;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
-    "ShopDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ShopMvcApp_PD211;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SomeeComDb": "workstation id=ShopAppDb.mssql.somee.com;packet size=4096;user id=wladnaz_SQLLogin_1;pwd=qsyiy5d3ff;data source=ShopAppDb.mssql.somee.com;persist security info=False;initial catalog=ShopAppDb;TrustServerCertificate=True"
   }
 }
