--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -10,6 +10,7 @@
 		<PackageReference Include="AutoMapper" Version="13.0.1" />
 		<PackageReference Include="FluentValidation" Version="11.9.2" />
 		<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+		<PackageReference Include="MailKit" Version="4.7.1.1" />
 	</ItemGroup>
 
 	<ItemGroup>
